RESOLVED FIXED Bug 235008
[Web Animations] getKeyframes() for a CSS Animation should not use computed style for keyframes
https://bugs.webkit.org/show_bug.cgi?id=235008
Summary [Web Animations] getKeyframes() for a CSS Animation should not use computed s...
Antoine Quint
Reported 2022-01-08 14:40:20 PST
[Web Animations] getKeyframes() for a CSS Animation should not use computed style for keyframes
Attachments
Patch (15.86 KB, patch)
2022-01-08 14:47 PST, Antoine Quint
koivisto: review+
Antoine Quint
Comment 1 2022-01-08 14:47:48 PST
Antoine Quint
Comment 2 2022-01-09 07:35:24 PST
Radar WebKit Bug Importer
Comment 3 2022-01-09 07:36:21 PST
Darin Adler
Comment 4 2022-01-09 08:53:51 PST
Comment on attachment 448683 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=448683&action=review > Source/WebCore/style/StyleResolver.h:142 > + const Vector<Ref<StyleRuleKeyframe>> keyframeRulesForName(const AtomString&); There signature here isn’t quite right. This should be a const member function and it should return a non-const Vector: Vector<Ref<StyleRuleKeyframe>> keyframeRulesForName(const AtomString&) const;
Antoine Quint
Comment 5 2022-01-09 12:29:56 PST
(In reply to Darin Adler from comment #4) > Comment on attachment 448683 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=448683&action=review > > > Source/WebCore/style/StyleResolver.h:142 > > + const Vector<Ref<StyleRuleKeyframe>> keyframeRulesForName(const AtomString&); > > There signature here isn’t quite right. This should be a const member > function and it should return a non-const Vector: > > Vector<Ref<StyleRuleKeyframe>> keyframeRulesForName(const AtomString&) > const; Filed bug 235021 to fix this.
Antoine Quint
Comment 6 2022-01-10 05:03:12 PST
We'll fix more of this in bug 235028.
Note You need to log in before you can comment on or make changes to this bug.