Source/WebCore/style/StyleResolver.h
@@ -139,6 +139,7 @@ public:
     std::optional<DynamicMediaQueryEvaluationChanges> evaluateDynamicMediaQueries();
 
     void addKeyframeStyle(Ref<StyleRuleKeyframes>&&);
+    const Vector<Ref<StyleRuleKeyframe>> keyframeRulesForName(const AtomString&);
 
     bool usesFirstLineRules() const { return m_ruleSets.features().usesFirstLineRules; }
     bool usesFirstLetterRules() const { return m_ruleSets.features().usesFirstLetterRules; }
